# frag

./: Acknowledgements.txt
Frag/: Behavior.hs  Kernel.hs  PreBehavior.hs  RWChan.hs  Request.hs  Time.hs  Util.hs
data-ivar/Data/: IVar.hs
data-quotientref/Data/: QuotientRef.hs
data-trie/: data-ivar.cabal  data-trie.cabal
data-trie/Data/: Trie.hs
experiments/: collect_monad.hs  infinite_partition.hs  merge_unmerge.hs  writerref.hs
frag-frp/: example.hs  silverseed.hs
frag-frp/Frag/: Behavior.hs  Core.hs  Env.hs  Event.hs  Fun.hs  Future.hs  FutureST.hs  Knot.hs  NatTrie.hs  PrimFuture.hs  RWChan.hs  Reactive.hs  SDL.hs  StateMachine.hs  Time.hs  Util.hs
frag-frp/Frag/Adapter/: SDL.hs
notes/: architecture.txt  knot_monad.txt  new_direction.txt  representation_brainstorm.txt  windowed_computation.txt
