Name: data-trie
Description:
    A class for lazy maps based on tries.
Version: 0.30
Stability: experimental
Synopsis: Lazy maps based on tries.
License: BSD3
Category: Data
Author: Luke Palmer
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Build-Depends: base
Exposed-Modules: Data.Trie
Extensions:
